# apprendre_servidor

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.debug.yaml  compose.yaml  pyproject.toml  requirements.txt
src/: container.py  main.py  settings.py
src/application/services/: auth_service.py  password_service.py  token_service.py  user.py
src/domain/exceptions/: except_manager.py
src/domain/objects/: subject_dto.py
src/endpoints/: allergy_info.py  auth.py  calendar_activity.py  classes.py  course.py  food_intolerance.py  medical_info.py  parent.py  role.py  school_subject.py  student.py  student_class.py  subject_class.py  teacher.py  user.py
src/infrastructure/connection/: db.py  redis.py
src/infrastructure/controllers/: allergy_info.py  auth.py  calendar_activity.py  classes.py  course.py  food_intolrance.py  medical_info.py  parent.py  role.py  school_subject.py  student.py  student_class.py  subject_class.py  teacher.py  user.py
src/infrastructure/entities/: accces_logs.py  deletion_logs.py  roles.py  user.py
src/infrastructure/exceptions/: except_manager.py
src/infrastructure/repositories/: acces_logs.py  activity_type.py  allergy_info.py  calendary_activity.py  classes.py  course.py  deletion_logs.py  food_intolerance.py  medical_info.py  parent.py  role.py  school_subject.py  student.py  student_class.py  subject_activities.py  subject_activity_score.py  subject_class.py  teacher.py  user.py
src/middleware/token/: authenticateToken.py
test/application/services/: test_password_service.py  test_token_service.py
(+174 files in other folders)
