[project]
name = "apprendre"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiopg>=1.4.0",
    "alembic>=1.16.5",
    "dependency-injector>=4.48.2",
    "fastapi>=0.117.1",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.2.10",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "pydocstyle>=6.3.0",
    "pyjwt>=2.10.1",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.25",
    "uvicorn[standard]>=0.37.0",
]

[dependency-groups]
dev = [
    "sqlalchemy2-stubs>=0.0.2a38",
]
